[Refactor] remove FileResource