@@ -1,10 +1,16 @@
 package com.hello_webserver.webresources;
 
+import com.hello_webserver.webserver.RequestHandler;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
+
+import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
+import java.nio.file.Paths;
 
 public class WebResourceHandler {
-    private WebResourceReader reader;
+    private static final Logger log = LoggerFactory.getLogger(RequestHandler.class);
     private final String webAppDir;
 
     public WebResourceHandler(String webAppDir) {
@@ -13,21 +19,28 @@ public class WebResourceHandler {
 
     public Resource getResource(String path) {
         String resourcePath = webAppDir + setIfRootPath(path);
-        if (isExistReader(resourcePath)) {
-            return reader.readResource(resourcePath);
+        ResourceType resourceType = ResourceType.fromFilePath(resourcePath);
+        byte[] content = readResource(resourcePath);
+        if (isReadContent(content) && isSupportedResourceType(resourceType)) {
+            return new Resource(content, resourceType.getContentType());
         }
         return new Resource();
     }
 
-    private boolean isExistReader(String resourcePath) {
-        if (isFile(resourcePath)) {
-            reader = new FileResourceReader();
-        }
-        return reader != null;
+    private boolean isSupportedResourceType(ResourceType resourceType) {
+        return resourceType != null;
     }
 
-    private boolean isFile(String filePath) {
-        return Files.exists(Path.of(filePath));
+    private boolean isReadContent(byte[] content) {
+        return content != null;
+    }
+
+    private byte[] readResource(String filePath) {
+        try {
+            return Files.readAllBytes(Paths.get(filePath));
+        } catch (IOException e) {
+            return null;
+        }
     }
 
     private String setIfRootPath(String filePath) {
